--- a/ej-javascript.html
+++ b/ej-javascript.html
@@ -13,7 +13,7 @@
     <h2>ejercicio N°3 Modo strict</h2>
     <h2>ejercicio N°4 Conversion implicita de variables </h2>
     <H2>ejercicio N°5 Conversion Explisita de variables</H2>
-
+    <h2>Ejercicio N°6 operadores aritmeticos</h2>
     <script src="./ej-javascript/ejerciciosjs.js"></script>
 </body>
 </html>
