--- a/fuenteds.html
+++ b/fuenteds.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>9:15 A.M</h1>
-    
+    <h1 id="hora"><!-- 9:15 A.M --></h1>
+
+
+    <script src="./js/horas.js"></script>
 </body>
 </html>
