Filtro_Busqueda_Fin

--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -59,6 +59,7 @@
                                <li><a class="menu" href="./menu_desplegable.html">Menú Desplegable</a></li>
                                <li><a href="./menu_responsive.html" class="menu">Menú Responsive</a></li>
                                <li><a class="menu" href="./media-query.html">Menú Hamburguesa</a></li>
+                               <li><a href="./filtro_busqueda.html" class="menu">Filtro Busqueda</a></li>
                            </ul>
                        </li>
                        <li class="menu1">shadow
