--- a/filtro_busqueda.html
+++ b/filtro_busqueda.html
@@ -8,21 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu">
+    <div class="menu" id="MainBoxOne">
         <nav>
+            
             <ul>
-                <li><img src="./img/homeCenterLogo.png" alt="" srcset="" class="img-logo"></li>
-                <li><img src="./img/LogoHomeCenterJunior.jpg" alt="" srcset="" class="img-logo-Jn"></li>
-                <div class="busqueda">
+                <li><i class="Hamburguer fa-solid fa-bars"></i></li>
+                <li><img src="./img/homeCenterLogo.png" alt="" srcset="" class="img-logo"><a href="./index.html"></a></li>
+                <img src="./img/LogoHomeCenterJunior.jpg" alt="" srcset="" class="img-logo-Jn"><a href="./index.html"></a>
+                <!-- <div class="busqueda"> -->
                     <input type="search" name="" id="" placeholder="¿ Qué estás buscando ?" class="div-busqueda">
-                    <i class="lupa fa-solid fa-magnifying-glass"></i>
-                </div>
-                <li><i class="icono fa-solid fa-location-dot"></i><a href="#">Mi ubicacion</a></li>
-                <li><i class="icono fa-solid fa-cart-shopping"></i><a href=""></a></li>
+                    <i class="lupa fa-solid fa-magnifying-glass" id="Question"></i>
+                <!-- </div> -->
+                <li><i class="icono fa-solid fa-location-dot" ></i><a href="#">Mi ubicacion</a></li>
+                <li><i class="icono fa-solid fa-cart-shopping"></i><a href="#">carrito Compras</a></li>
                 <li><img src="./img/CMR.png" alt="" srcset="" class="img-cmr"><a href="#">CMR Puntos</a></li>
                 <li><i class="icono fa-solid fa-user"></i><a href="#">Mi Cuenta</a></li>
             </ul>
         </nav>
     </div>
+    <div class="menu-Busqueda-inactivo" id="MeinBoxTwo">
+        
+        <ul class="position">
+            <i class="lupa2 fa-solid fa-magnifying-glass"></i>
+            <input type="text" name="" id="" class="text" placeholder="¿ Que deseas Buscar ?">
+            <i class="equis fa-solid fa-x" id="elimanar"></i>
+        </ul>
+    </div>
+    <script src="./js/filtro_busqueda.js"></script>
 </body>
 </html>
