--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Aprendizajes</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./fonts/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Fjalla+One&family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./icons/all.css">
 </head>
 <body>
     <div  class="menu_bar">
@@ -15,20 +19,24 @@
     <div class="box-head">
         <nav>
             <ul>
-                <li> <a href="./index.html">Home</a></li>
-                <li> <a href="#">Mi Portafolio</a></li>
-                <li><a href="./aprendizaje.html"> Mi Aprendizaje</a></li>
+               <img class="logo_mimi" src="./img/logo_mini.png" alt="">
+                <li> <a href="./index.html"><i class=" iconos fa-solid fa-house"></i>Home</a></li>
+                <li> <a href="#"><i class="iconos fa-regular fa-folder-open"></i>Mi Portafolio</a></li>
+                <li><a href="./aprendizaje.html"><i class="iconos fa-solid fa-laptop-file"></i> Mi Aprendizaje</a></li>
             </ul>
         </nav>
     </div>
-    <div class="box-center">
-        <div class="cuerpo">
-            <h2>Bienvenidos </h2>
-            <h2>Estos son mis Aprendizajes</h2>
-            <img class="logo" src="./img/logo.png" alt="">
-            <button><a href="aprendizaje.html">Ingresar</a></button>
-        </div>
+    <div class="home">
+        <div class="box-center">
+            <div class="cuerpo">
+                <h2 class="title">Bienvenidos </h2>
+                <span>Este es mi portafolio</span>
+                <img class="logo" src="./img/logo.png" alt="">
+                <button><a class="letter" href="aprendizaje.html">Ingresar</a></button>
+            </div>
         
+        </div>
     </div>
+    
 </body>
 </html>
