--- a/Juegos/dino.html
+++ b/Juegos/dino.html
@@ -6,13 +6,16 @@
     <title>Dino Game</title>
     <link rel="stylesheet" href="./css/dino.css">
 </head>
-<body>
+<body style="display:flex ;">
 
     <button onclick="moveBackground()"> Iniciar</button>
     <div class="game-container">
         <div class="background"></div>
-        <div class="dino"></div>
+        <div class="dino">
+            <img src="img/dino13.gif" alt="">
+        </div>
         <div class="dino2"></div>
+        <div class="trampa"></div>
         <div class="ground"></div>
         <div class="game-over">Game Over</div>
     </div>
